tests/architecture/fixtures/invalid/seasonalweather/controller.py
from seasonalweather.worker.handlers import synthesize


def dispatch() -> None:
    synthesize()
